# dm_motor_kdl

dm_ws/devel/: .catkin
dm_ws/devel/include/dm_motor_controller/: MITCommand.h
dm_ws/devel/lib/dm_motor_controller/: dm_motor_node  example-1_position  example-2_position_offline  example-5_velocity  example-6_stop  example-7_minimum_duration  example-8_dynamic_dofs  kdl_trajectory_generator  motor_zeroing_node  otg-test  publish_trajectory  trajectory_mit_node  trajectory_planner
dm_ws/devel/lib/pkgconfig/: dm_motor_controller.pc
dm_ws/devel/lib/python3/dist-packages/dm_motor_controller/msg/: _MITCommand.py  __init__.py
dm_ws/devel/share/common-lisp/ros/dm_motor_controller/msg/: MITCommand.lisp  _package.lisp  _package_MITCommand.lisp  dm_motor_controller-msg.asd
dm_ws/devel/share/dm_motor_controller/cmake/: dm_motor_controller-msg-extras.cmake  dm_motor_controller-msg-paths.cmake  dm_motor_controllerConfig.cmake
dm_ws/devel/share/gennodejs/ros/dm_motor_controller/msg/: MITCommand.js  _index.js
dm_ws/devel/share/roseus/ros/dm_motor_controller/: manifest.l
dm_ws/devel/share/roseus/ros/dm_motor_controller/msg/: MITCommand.l
dm_ws/src/dm_motor_controller/: CMakeLists.txt  package.xml
dm_ws/src/dm_motor_controller/config/: controllers.yaml  dm_4dof_control_hwi.yaml  kdl_trajectory.yaml  trajectory.yaml  trajectory_comparison.yaml  trajectory_kdl.yaml
dm_ws/src/dm_motor_controller/data/: trajectory_all.csv  trajectory_comparison.csv  trajectory_latest.csv  trajectory_result.csv
dm_ws/src/dm_motor_controller/data/first/: trajectory_latest.csv
dm_ws/src/dm_motor_controller/launch/: kdl_trajectory.launch  mit_none.launch  motor_startup.launch  test_dm_4dof_hwi.launch  trajectory_comparison.launch  trajectory_mit.launch
dm_ws/src/dm_motor_controller/msg/: MITCommand.msg  mit_control_frame.msg
dm_ws/src/dm_motor_controller/scripts/: publish_trajectory.py
dm_ws/src/dm_motor_controller/src/: dm_4dof_control_hwi.cpp  dm_motor_node.cpp  kdl_trajectory_generator.cpp  motor_zeroing_node.cpp  publish_trajectory.cpp  tem.txt  test_damiao.cpp  trajectory_comparison_node.cpp  trajectory_mit_node.cpp
dm_ws/src/dm_motor_controller/src/test/: test_publisher.cpp
